# webfont-kit-generator

./: .gitignore  .transifex.yml  FontTools.json  README.md  com.rafaelmardojai.WebfontKitGenerator.json  meson.build  pyproject.toml  requirements.txt  webfont-kit-generator.doap
.github/workflows/: CI.yml
build-aux/: com.rafaelmardojai.WebfontKitGenerator.json  python3-requirements.json
data/: com.rafaelmardojai.WebfontKitGenerator.desktop.in  com.rafaelmardojai.WebfontKitGenerator.gschema.xml  com.rafaelmardojai.WebfontKitGenerator.metainfo.xml.in  com.rafaelmardojai.WebfontKitGenerator.service.in  meson.build
debian/: changelog  control  copyright  watch
po/: LINGUAS  POTFILES  ar.po  ca.po  cs.po  de.po  es.po  et.po  fa.po  fi.po  fr.po  fr_FR.po  gl.po  hi.po  hr.po  ka.po  kk.po  meson.build  nl.po  oc.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  tr.po  webfontkitgenerator.pot  zh.po
src/: actions.py  font.py  font_widget.py  generator.py  loader.py  log.py  main.py  meson.build  options.py  sourceview.py  webfontkitgenerator.in  window.py
src/resources/: meson.build  webfontkitgenerator.gresource.xml
src/resources/css/: styles.css
src/resources/ui/: about.ui  options.ui  window.ui
webfontkitgenerator/: about.blp  about.ui  actions.py  font.py  generator.py  google.blp  google.py  google.ui  loader.py  log.py  main.py  meson.build  options.blp  options.py  shortcuts-dialog.blp  sourceview.py  style.css  webfontkitgenerator.gresource.xml  webfontkitgenerator.in  window.blp  window.py
webfontkitgenerator/gtk/: help-overlay.blp
webfontkitgenerator/resources/: about.ui  google.ui  options.ui  shortcuts.ui  style.css  webfontkitgenerator.gresource.xml  window.ui
webfontkitgenerator/resources/css/: styles.css
webfontkitgenerator/resources/ui/: options.ui  window.ui
